# auratyme-zlota-apka

./: README.md  compose.yaml  startup-linux.sh  startup-win.bat
backend/schedules-ai/: .env.dev  Dockerfile  README.md  __init__.py  oauth-tenant-public-key.pem  pyproject.toml  requirements.txt
backend/schedules-ai/api/: __init__.py  db.py  dependencies.py  server.py
backend/schedules-ai/api/middleware/: __init__.py  auth.py  jwt_auth.py  logging.py
backend/schedules-ai/api/routes/: __init__.py  health.py
backend/schedules-ai/api2/: dependencies.py  main.py
backend/schedules-ai/api2/middleware/: auth.py
backend/schedules-ai/api2/routes/: schedules.py
backend/schedules-ai/data/config/: default.yaml  production.yaml
backend/schedules-ai/feedback/collectors/: __init__.py  device_data.py  user_input.py
backend/schedules-ai/feedback/processors/: analyzer.py
backend/schedules-ai/scripts/: deploy.py  generate_and_save_schedule.py  generate_example_schedule.py  monitor_scheduler_logs.sh  run_api_server.py  run_api_server_debug.py  run_api_server_no_db.py  run_api_server_with_jwt.bat  run_api_server_with_jwt.py  run_api_server_with_jwt.sh  run_dev_environment.py  run_dev_environment_simple.py  setup.py  test_apidog_endpoints.py  test_apidog_with_db.py  test_jwt_auth.py  test_user_schedules.py
backend/schedules-ai/src/: __init__.py
backend/schedules-ai/src/adapters/: __init__.py  device_adapter.py  rag_adapter.py
backend/schedules-ai/src/core/: __init__.py  chronotype.py  constraint_solver.py  prioritizer.py  scheduler.py  sleep.py  task_prioritizer.py
backend/schedules-ai/src/services/: analytics.py  llm_engine.py  rl_engine.py  wearables.py
backend/schedules-ai/src/utils/: time_utils.py  validators.py
backend/schedules-ai/tests/: __init__.py
backend/schedules-ai/tests/fixtures/: mock_data.py
backend/schedules-ai/tests/integration/: __init__.py  test_api.py
backend/schedules-ai/tests/unit/: __init__.py  test_scheduler.py  (+2 more)
(+375 files in other folders)
